--- a/triproyale_frontend/package.json
+++ b/triproyale_frontend/package.json
@@ -15,12 +15,13 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.4",
     "bootstrap": "^4.6.2",
-    "cloudinary-core": "^2.12.0",
+    "cloudinary-core": "^2.13.0",
     "cloudinary-react": "^1.8.1",
-    "lightbox.js-react": "^0.5.4",
+    "lightbox.js-react": "^0.5.6",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-bootstrap-validation": "^0.1.11",
+    "react-cloudinary-upload-widget": "^1.7.5",
     "react-dom": "^18.2.0",
     "react-grid-gallery": "^1.0.0",
     "react-helmet": "^6.1.0",
